Change the lowest oom_score_adj value for ARC++ process

oom_score_adj should not be set to -1000 for ARC++ processes.

Bug: chromium:876976
Change-Id: I4259d646755761dce5429170a45be5f8faf34b9f
Reviewed-on: https://chromium-review.googlesource.com/1186282
Commit-Queue: Vovo Yang <vovoy@chromium.org>
Reviewed-by: Cheng-Yu Lee <cylee@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587498}
Former-commit-id: 49d3354b914f2b4bfd44c3d309deec491a45fa3b